--- a/scss/message.scss
+++ b/scss/message.scss
@@ -250,6 +250,39 @@
     .message-list-page-wrap .messages-box .chat-person-list-box .title{
         padding: .8rem;
     }
+
+    .chat-room-head{
+        display: none!important;
+    }
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room{
+        padding: 0.8rem;
+    }
+
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item{
+        margin-bottom: 0.2rem;
+        padding: 0.6rem;
+        font-size: 12px;
+    }
 }
 
-@include q.responsive(landphone) {}
+@include q.responsive(landphone) {
+    .message-list-page-wrap .messages-box { 
+        grid-template-columns: 100%;
+    }
+    .message-list-page-wrap .messages-box .chat-person-list-box .title{
+        padding: .8rem;
+    }
+
+    .chat-room-head{
+        display: none!important;
+    }
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room{
+        padding: 0.8rem;
+    }
+
+    .message-list-page-wrap .messages-box .chat-main-body-box .main-chat-room .chat-messages-box .message-item{
+        margin-bottom: 0.2rem;
+        padding: 0.6rem;
+        font-size: 12px;
+    }
+}
