--- a/public/latest/assets/admin-css/header.css
+++ b/public/latest/assets/admin-css/header.css
@@ -27,7 +27,7 @@
 .header-area .navbar-nav .nav-item .submenu-box {
   position: absolute;
   left: -25px;
-  bottom: -200px;
+  top: 60px;
   z-index: 99;
   background-color: #fff;
   min-width: 220px;
@@ -35,7 +35,7 @@
   border-radius: 6px;
   border: 1px solid #ccc;
   transform: translateY(-15%);
-  visibility: hidden;
+  display: none;
   transition: all linear 0.3s;
 }
 .header-area .navbar-nav .nav-item .submenu-box li a {
@@ -63,7 +63,7 @@
   color: #000000;
 }
 .header-area .navbar-nav .nav-item:hover .submenu-box {
-  visibility: visible;
+  display: block;
   transform: translateY(0);
 }
 .header-area .d-flex {
