--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,6 +10,12 @@
         left: -55px;
     }
 
+    .navbar-brand{
+        img{
+            max-width: 8.5rem;
+        }
+    }
+
     .navbar-nav {
         .nav-item {
             position: relative;
