--- a/public/latest/assets/admin-css/ins-dashboard.css
+++ b/public/latest/assets/admin-css/ins-dashboard.css
@@ -51,3 +51,111 @@
   background-color: #0D5EF4;
   border-radius: 0.25rem;
 }
+
+.my-courses-box {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
+  padding: 1.5rem;
+}
+.my-courses-box h3 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+}
+.my-courses-box .media {
+  align-items: center;
+  margin-top: 1.38rem;
+}
+.my-courses-box .media h5 {
+  color: var(--neutral-color-neutral-80, #1C2636);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+}
+.my-courses-box .media p {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin: 0.25rem 0 0.4rem;
+}
+.my-courses-box .media ul li {
+  color: var(--neutral-color-neutral-60, #66768E);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 155%;
+  display: flex;
+  align-items: center;
+}
+.my-courses-box .media ul li img {
+  margin-right: 0.5rem;
+}
+.my-courses-box .media a {
+  display: inline-block;
+}
+.my-courses-box .media a i {
+  color: #A6B1C4;
+  font-size: 1.2rem;
+}
+
+.recent-payment-box {
+  border-radius: 0.5rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: #FFF;
+  box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
+  padding: 1.5rem;
+}
+.recent-payment-box h3 {
+  color: var(--text-light-primary, #212B36);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.75rem;
+}
+.recent-payment-box .payment-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #E4E7EC;
+  padding: 1rem 0;
+}
+.recent-payment-box .payment-box img {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 1rem;
+}
+.recent-payment-box .payment-box h5 {
+  color: var(--black, #212B36);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
+.recent-payment-box .payment-box p {
+  color: var(--black, #212B36);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
+.recent-payment-box .payment-box a {
+  border-radius: 0.375rem;
+  background: rgba(61, 92, 255, 0.2);
+  display: inline-block;
+  padding: 0.2rem 0.75rem;
+  color: var(--primary-color-blue, #294CFF);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+}
