--- a/scss/header.scss
+++ b/scss/header.scss
@@ -71,6 +71,10 @@
                             color: #fff;
                         }
                     }
+                    a.active{
+                        background-color: #294CFF;
+                        color: #fff;
+                    }
 
                     &:last-child {
                         a {
