--- a/scss/ins-dashboard.scss
+++ b/scss/ins-dashboard.scss
@@ -183,3 +183,20 @@
         }
     }
 }
+
+.chart-box-wrap {
+    border-radius: 0.5rem;
+    border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    background: var(--neutral-white, #FFF);
+    box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+    padding: 1.5rem 1.125rem;
+
+    h5 {
+        color: var(--neutral-black-black-500, #1D1F2C); 
+        font-size: 1.25rem;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 1.875rem; 
+        letter-spacing: 0.0125rem;
+    }
+}
