--- a/public/latest/assets/admin-css/ins-dashboard.css
+++ b/public/latest/assets/admin-css/ins-dashboard.css
@@ -175,3 +175,16 @@
   line-height: 1.875rem;
   letter-spacing: 0.0125rem;
 }
+
+.edit-profile {
+  border-radius: 62.5rem;
+  border: 1px solid var(--primary-color-blue, #294CFF);
+  display: inline-block;
+  padding: 0.75rem;
+  color: var(--primary-color-blue, #294CFF);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+  margin-top: 2rem;
+}
