--- a/public/latest/assets/admin-css/subscription.css
+++ b/public/latest/assets/admin-css/subscription.css
@@ -205,6 +205,18 @@
   color: #fff;
 }
 
+.btn-view {
+  border-radius: 0.375rem;
+  background: rgba(61, 92, 255, 0.2);
+  color: var(--primary-color-blue, #294CFF);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.375rem;
+  display: inline-block;
+  padding: 0.3rem 0.8rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .package-list-header {
     padding: 1rem;
