--- a/scss/subscription.scss
+++ b/scss/subscription.scss
@@ -193,14 +193,14 @@
                 line-height: 1.5rem;
             }
 
-            #feature_increment { 
+            #feature_increment {
                 border-radius: 0.25rem;
                 background: #F3F5FF;
                 color: var(--primary-color-blue, #294CFF);
                 font-size: 0.75rem;
                 font-style: normal;
                 font-weight: 500;
-                line-height: 1.5rem; 
+                line-height: 1.5rem;
                 padding: .2rem .5rem;
                 display: inline-block;
                 transition: all linear .3s;
@@ -242,6 +242,18 @@
             }
         }
     }
+}
+
+.btn-view {
+    border-radius: 0.375rem;
+    background: rgba(61, 92, 255, 0.20);
+    color: var(--primary-color-blue, #294CFF); 
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.375rem; 
+    display: inline-block;
+    padding: .3rem .8rem;
 }
 
 // small phone device
