--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -834,6 +834,141 @@
   line-height: 1.375rem;
 }
 
+.overall-progress {
+  text-align: center;
+}
+.overall-progress h6 {
+  color: var(--neutral-20, #F9F9F9);
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+  margin-bottom: 2rem;
+}
+
+.course-description-box {
+  margin-top: 2rem;
+}
+.course-description-box h4 {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+  margin-bottom: 2rem;
+}
+.course-description-box h2,
+.course-description-box h3,
+.course-description-box h5,
+.course-description-box h4,
+.course-description-box h6 {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+  margin-bottom: 1rem;
+}
+.course-description-box p {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 1rem;
+}
+
+.course-details {
+  margin-top: 2rem;
+  border-left: 1px solid #E0E0E0;
+  margin-left: 1rem;
+  padding-left: 2rem;
+}
+.course-details h4 {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+  margin-bottom: 2rem;
+}
+.course-details p {
+  color: var(--neutral-90, #252525);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.course-details p img {
+  margin-right: 0.5rem;
+}
+
+.all-modules-box {
+  margin-top: 5rem;
+}
+.all-modules-box h3 {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+.course-modules-boxx {
+  border-radius: 1rem;
+  border: 1px solid var(--neutral-40, #E0E0E0);
+  background: var(--neutral-10, #FFF);
+  padding: 1.5rem;
+  margin-top: 2rem;
+}
+.course-modules-boxx .media {
+  align-items: center;
+}
+.course-modules-boxx .media h5 {
+  color: var(--neutral-90, #252525);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 135%;
+}
+.course-modules-boxx .media p {
+  color: var(--neutral-70, #7C7C7C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 155%;
+  margin-top: 0.4rem;
+}
+.course-modules-boxx hr {
+  margin: 1.5rem 0;
+  border: 0;
+  background-color: #E0E0E0;
+  height: 1px;
+}
+.course-modules-boxx ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.course-modules-boxx ul li span {
+  color: var(--neutral-90, #252525);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+.course-modules-boxx .text-center {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .student-courses-lists-pages .course-ol-box {
     left: 0%;
@@ -908,8 +1043,8 @@
     padding-bottom: 2rem;
   }
   .course-overview-page .overview-banner-box .banner-title h1 {
-    font-size: 1.8rem;
-    line-height: 2.5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
   .course-overview-page .overview-banner-box .banner-title p {
     font-size: 1rem;
@@ -953,6 +1088,17 @@
     display: block;
     text-align: center;
     width: 100%;
+  }
+  .overall-progress {
+    margin-top: 2rem;
+  }
+  .course-details {
+    padding-left: 0;
+    margin-left: 0;
+    border-left: 0;
+    border-top: 1px solid #E0E0E0;
+    padding-top: 1.5rem;
+    margin-top: 1.5rem;
   }
 }
 @media (min-width: 574px) and (max-width: 767px) {
