--- a/scss/ins-dashboard.scss
+++ b/scss/ins-dashboard.scss
@@ -237,3 +237,70 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+// responsive css
+
+// small phone device
+@include q.responsive(phone) {
+    .recent-payment-box,
+    .my-courses-box,
+     .welcome-back-box{
+        padding: 1rem;
+     }
+     .welcome-back-box h1{
+        font-size: 1.2rem;
+     }
+     .welcome-back-box .d_flex { 
+        grid-template-columns: 90% 10%; 
+    }
+
+    .my-courses-box .media{
+        flex-direction: column;
+    }
+    .my-courses-box {
+        text-align: center;
+        img.me-3{
+            margin-right: 0!important;
+            margin-bottom: 1rem;
+        }
+    }
+    .my-courses-box .media ul li{
+        justify-content: center;
+    }
+
+    .my-courses-box .media a{
+        margin-top: 1rem;
+    }
+    .recent-payment-box .payment-box{
+        display: grid;
+        grid-template-columns: 70% 30%;
+        a{
+            text-align: center;
+        }
+    }
+
+    main{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+}
+
+// landscape phone device 
+@include q.responsive(landphone) {
+     
+}
+
+// tablet device 
+@include q.responsive(tablet) {
+     
+}
