--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -929,20 +929,166 @@
         }
 
         h6 {
-            color: var(--text-light-secondary, #637381); 
+            color: var(--text-light-secondary, #637381);
             font-size: 0.875rem;
             font-style: normal;
             font-weight: 400;
-            line-height: 1.375rem; 
+            line-height: 1.375rem;
         }
     }
 }
 
+.overall-progress {
+    text-align: center;
+
+    h6 {
+        color: var(--neutral-20, #F9F9F9);
+        font-size: 1.5rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%;
+        margin-bottom: 2rem;
+    }
+}
+
+.course-description-box {
+    margin-top: 2rem;
+
+    h4 {
+        color: var(--neutral-color-neutral-70, #2F3A4C);
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%;
+        margin-bottom: 2rem;
+    }
+
+    h2,
+    h3,
+    h5,
+    h4,
+    h6 {
+        color: var(--neutral-color-neutral-70, #2F3A4C);
+        font-size: 1.8rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%;
+        margin-bottom: 1rem;
+    }
+
+    p {
+        color: var(--neutral-color-neutral-70, #2F3A4C);
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        margin-bottom: 1rem;
+    }
+}
+
+.course-details {
+    margin-top: 2rem;
+    border-left: 1px solid #E0E0E0;
+    margin-left: 1rem;
+    padding-left: 2rem;
+
+    h4 {
+        color: var(--neutral-color-neutral-70, #2F3A4C);
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%;
+        margin-bottom: 2rem;
+    }
+
+    p {
+        color: var(--neutral-90, #252525);
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+
+        img {
+            margin-right: 0.5rem;
+        }
+    }
+}
+
+.all-modules-box {
+    margin-top: 5rem;
+
+    h3 {
+        color: var(--neutral-color-neutral-70, #2F3A4C);
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%;
+    }
+}
+
+.course-modules-boxx {
+    border-radius: 1rem;
+    border: 1px solid var(--neutral-40, #E0E0E0);
+    background: var(--neutral-10, #FFF);
+    padding: 1.5rem;
+    margin-top: 2rem;
+
+    .media {
+        align-items: center;
+
+        h5 {
+            color: var(--neutral-90, #252525);
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 135%;
+        }
+
+        p {
+            color: var(--neutral-70, #7C7C7C);
+            font-size: 0.875rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 155%;
+            margin-top: 0.4rem;
+        }
 
 
+    }
 
+    hr {
+        margin: 1.5rem 0;
+        border: 0;
+        background-color: #E0E0E0;
+        height: 1px;
+    }
 
+    ul {
+        li {
+            @include m.df(space-between);
+            margin-bottom: 1rem;
 
+            span {
+                color: var(--neutral-90, #252525);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 150%;
+            }
+        }
+    }
+
+    .text-center {
+        color: var(--neutral-color-neutral-70, #2F3A4C); 
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%; 
+    }
+}
 
 
 
@@ -1047,8 +1193,8 @@
     }
 
     .course-overview-page .overview-banner-box .banner-title h1 {
-        font-size: 1.8rem;
-        line-height: 2.5rem;
+        font-size: 1.5rem;
+        line-height: 2rem;
     }
 
     .course-overview-page .overview-banner-box .banner-title p {
@@ -1104,6 +1250,19 @@
         display: block;
         text-align: center;
         width: 100%;
+    }
+
+    .overall-progress{
+        margin-top: 2rem;
+    }
+
+    .course-details{
+        padding-left: 0;
+        margin-left: 0;
+        border-left: 0;
+        border-top: 1px solid #E0E0E0;
+        padding-top: 1.5rem;
+        margin-top: 1.5rem;
     }
 }
 
