--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -492,7 +492,7 @@ span.finsihLesson {
 .course-create-step-page-wrap .course-create-step-wrap .step-box:before {
   position: absolute;
   content: "";
-  left: 58px;
+  left: 57px;
   top: 8px;
   background-color: #E7EBFF;
   height: 0.125rem;
@@ -916,6 +916,11 @@ span.finsihLesson {
   position: relative;
   margin-top: 1.5rem;
 }
+.content-settings-form-wrap img.euro {
+  position: absolute;
+  right: 1rem;
+  top: 1.2rem;
+}
 .content-settings-form-wrap .form-control {
   position: relative;
   background-color: transparent;
@@ -930,6 +935,18 @@ span.finsihLesson {
   padding: 1rem 0.875rem;
   border-radius: 0.5rem;
   border: 1px solid var(--components-input-outlined, rgba(145, 158, 171, 0.32));
+}
+.content-settings-form-wrap h6 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+.content-settings-form-wrap #mceu_16 {
+  border-radius: 10px;
+  border-left: 1px solid var(--colors-components-divider, rgba(145, 158, 171, 0.24));
 }
 .content-settings-form-wrap label {
   position: absolute;
@@ -1018,6 +1035,35 @@ span.finsihLesson {
   margin: 1.5rem 0;
   background: #E4E7EC;
 }
+.content-settings-form-wrap .auto-text {
+  align-items: center;
+  margin-top: 1.5rem;
+}
+.content-settings-form-wrap .auto-text h6 {
+  color: var(--gray-700, #344054);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+.content-settings-form-wrap .auto-text p {
+  color: var(--gray-500, #667085);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.25rem;
+}
+.content-settings-form-wrap .btn-primary {
+  border-radius: 0.375rem;
+  background: var(--primary-color-blue, #294CFF);
+  color: var(--neutral-color-white, #FFF);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+}
 
 .highlighted-area-upload {
   border-radius: 0.5rem;
@@ -1043,6 +1089,119 @@ span.finsihLesson {
 .highlighted-area-upload p label {
   color: #294CFF;
   cursor: pointer;
+}
+
+.top-image-upload-box {
+  border-radius: 0.5rem;
+  background: var(--white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+  padding: 1.5rem;
+  margin-top: 6rem;
+  margin-bottom: 2rem;
+}
+.top-image-upload-box h4 {
+  color: var(--gray-900, #101828);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  display: flex;
+  align-items: center;
+}
+.top-image-upload-box h4 img {
+  margin-right: 0.5rem;
+}
+.top-image-upload-box .file-up-box {
+  border-radius: 0.5rem;
+  border: 2px dashed var(--neutral-color-neutral-40, #C5CCD8);
+  background: var(--white, #FFF);
+  padding: 3rem 1.5rem;
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-top: 0.75rem;
+}
+.top-image-upload-box .file-up-box p {
+  color: var(--gray-500, #667085);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+  margin-top: 0.75rem;
+}
+.top-image-upload-box .file-up-box p label {
+  color: #294CFF;
+  font-weight: 500;
+}
+
+.share-on-social-wrap {
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  background: var(--white, #FFF);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+  margin-top: 6em;
+}
+.share-on-social-wrap h4 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+}
+.share-on-social-wrap h6 {
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.75rem;
+  margin-top: 1rem;
+  margin-bottom: 0.75rem;
+}
+.share-on-social-wrap .d-flex {
+  margin-bottom: 2rem;
+}
+.share-on-social-wrap .d-flex a {
+  margin-right: 2rem;
+  text-align: center;
+  display: inline-block;
+}
+.share-on-social-wrap .d-flex a span {
+  color: #363636;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: block;
+  margin-top: 0.75rem;
+}
+.share-on-social-wrap .copy-link {
+  display: grid;
+  grid-template-columns: 85% 15%;
+}
+.share-on-social-wrap .copy-link input {
+  border-radius: 0.375rem;
+  border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+  background: rgba(0, 0, 0, 0.05);
+  padding: 0.5rem;
+  overflow: hidden;
+  color: var(--neutral-color-neutral-70, #2F3A4C);
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.share-on-social-wrap .copy-link a {
+  border-radius: 0.375rem;
+  background: var(--primary-color-blue, #294CFF);
+  padding: 0.5625rem 1.0625rem;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  color: var(--neutral-color-white, #FFF);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.25rem;
+  margin-left: 1rem;
+  text-align: center;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
